Fix overflow issues with main app container and make fonts slightly smaller to look better on mobile screens

--- a/app/src/scss/_activities.scss
+++ b/app/src/scss/_activities.scss
@@ -1,6 +1,5 @@
 .activity {
   box-shadow: 0 1px 3px #ddd;
-  width: 100%;
   padding: 10px 20px;
   background-opacity: 0;
   cursor: pointer;
