--- a/app/src/scss/_appbar.scss
+++ b/app/src/scss/_appbar.scss
@@ -1,5 +1,6 @@
 .app-bar {
   background: #673AB7;
   padding: 20px 0;
+  width: 100%;
   box-shadow: 0 2px 3px #B39DDB;
 }
