--- a/app/src/scss/_iconbutton.scss
+++ b/app/src/scss/_iconbutton.scss
@@ -8,7 +8,6 @@
   }
 
 .add-button {
-  font-size: 1.3em;
   position: absolute;
   right: 0;
   top: 15px;
